[package]
authors = ["Noojee"]
year = "2024"
name = "simple_measures"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
prettytable-rs = "^0.10"
nix = { version = "^0.29", features = ["signal"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
num = "^0.4"
